; ModuleID = '/home/carl/AnghaBench/reactos/drivers/bus/acpi/busmgr/extr_system.c_acpi_system_init.c'
source_filename = "/home/carl/AnghaBench/reactos/drivers/bus/acpi/busmgr/extr_system.c_acpi_system_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [17 x i8] c"acpi_system_init\00", align 1
@acpi_system_driver = common dso_local global i32 0, align 4
@AE_NOT_FOUND = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @acpi_system_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  store i32 0, i32* %2, align 4
  %3 = call i32 @ACPI_FUNCTION_TRACE(i8* getelementptr inbounds ([17 x i8], [17 x i8]* @.str, i64 0, i64 0))
  %4 = call i32 @acpi_bus_register_driver(i32* @acpi_system_driver)
  store i32 %4, i32* %2, align 4
  %5 = load i32, i32* %2, align 4
  %6 = icmp slt i32 %5, 0
  br i1 %6, label %7, label %10

7:                                                ; preds = %0
  %8 = load i32, i32* @AE_NOT_FOUND, align 4
  %9 = call i32 @return_VALUE(i32 %8)
  br label %10

10:                                               ; preds = %7, %0
  %11 = call i32 @return_VALUE(i32 0)
  %12 = load i32, i32* %1, align 4
  ret i32 %12
}

declare dso_local i32 @ACPI_FUNCTION_TRACE(i8*) #1

declare dso_local i32 @acpi_bus_register_driver(i32*) #1

declare dso_local i32 @return_VALUE(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
